fix: Now actually fix what I broke on mobile but not at 2am from my phone so it should work, maybe, hopefully, please

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -644,7 +644,7 @@ a:hover {
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  /* border: solid 3px var(--backgroundColor); */
+  border: solid 3px var(--backgroundColor);
   box-shadow: var(--boxShadow-lt);
   border-radius: var(--borderRadius);
 }
@@ -729,16 +729,16 @@ a:hover {
 
 .speakers-grid--card-headshot img {
   width: 100%;
+  height: 100%;
   -o-object-fit: contain;
      object-fit: contain;
 }
 
-@media (min-width: 1000px) {
 .speakers-grid--card-headshot::before {
   content: '';
   display: block;
-  width: 60px;
-  height: 60px;
+  width: 32px;
+  height: 32px;
   background-image: url(../images/icon-hht.svg);
   background-image: url(../images/icon-getinvolved.svg);
   background-repeat: no-repeat;
@@ -751,7 +751,7 @@ a:hover {
   /* mix-blend-mode: color-burn; */
   position: absolute;
     top: 4%;
-    left: 2%;
+    left: 1%;
     z-index: 5;
 }
 
@@ -759,15 +759,33 @@ a:hover {
   background-image: url(../images/icon-speakers.svg);
   background-image: url(../images/icon-gracias.svg);
   transform: rotate(0);
-  width: 70px;
-  height: 70px;
-  top: 79%;
-  left: 71%;
+  width: 40px;
+  height: 40px;
+  top: 70%;
+  left: 60%;
 }
 
-.speakers-grid--card-headshot:hover::before {
-  opacity: .8;
-}
+@media (min-width: 1000px) {
+  .speakers-grid--card-headshot::before {
+    width: 60px;
+    height: 60px;
+      top: 4%;
+      left: 2%;
+  }
+
+  .speakers-grid :nth-child(even) .speakers-grid--card-headshot::before {
+    background-image: url(../images/icon-speakers.svg);
+    background-image: url(../images/icon-gracias.svg);
+    transform: rotate(0);
+    width: 70px;
+    height: 70px;
+    top: 79%;
+    left: 71%;
+  }
+
+  .speakers-grid--card-headshot:hover::before {
+    opacity: .8;
+  }
 }
 
 .speakers-grid--card-headshot a::after {
@@ -794,6 +812,7 @@ a:hover {
   margin: 0 0 .2em;
   width: 92%;
   word-break: keep-all;
+  font-size: calc(1.2em + (14 - 1.2) * ((100vw - 320px) / (1920 - 320)));
 }
 
 .speakers-grid--details-title {
@@ -949,7 +968,7 @@ a:hover {
   justify-content: center;
   align-content: center;
   justify-items: center;
-  font-size: .9em;
+  font-size: .8em;
   font-weight: 600;
   text-align: center;
   text-transform: uppercase;
@@ -1084,6 +1103,10 @@ a:hover {
   align-items: center;
 }
 
+.week-schedule--event-list .event-list--dateBlock p {
+  margin-bottom: 0;
+}
+
 /* .week-schedule--event-list :nth-child(even) .event-list--dateBlock {
   background-color: var(--purple);
   border-left-color: var(--purple);
@@ -1206,16 +1229,18 @@ a:hover {
     margin-bottom: 1em;
     /* border-left: solid 4px var(--secondaryColor); */
     border-radius: 0;
-    width: 35%;
+    /* width: 40%; */
+    width: 10rem;
   }
 
   .event-list--day {
     /* border-radius: var(--borderRadius); */
-    padding: .25em .75em;
+    padding: .25em .25em;
   }
 
   .event-list--date {
-    padding: 0 .5em 0;
+    padding: .1em 1em 0;
+    font-size: 1.1em;
 }
 
   /* .event-list--event {
